--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,14 @@
 @font-face{
   font-family:"Bachelor Pad Shadow JL";
-  src:url("./Bachelor Pad Shadow JL.ttf") format("truetype");
+  font-weight: normal;
+  font-style: italic;
+  src:
+  url('./Bachelor/BachelorPadShadowJL-Italic.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('./Bachelor/BachelorPadShadowJL-Italic.eot') format('embedded-opentype'), /* IE6-IE8 */
+       url('./Bachelor/BachelorPadShadowJL-Italic.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./Bachelor/BachelorPadShadowJL-Italic.woff') format('woff'), /* Modern Browsers */
+
+       url('./Bachelor/BachelorPadShadowJL-Italic.svg') format('svg'); /* Legacy iOS */
 }
 .App {
   text-align: center;
