--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
        url('./Bachelor/BachelorPadShadowJL-Italic.woff2') format('woff2'), /* Super Modern Browsers */
        url('./Bachelor/BachelorPadShadowJL-Italic.woff') format('woff'), /* Modern Browsers */
 
-       url('./Bachelor/BachelorPadShadowJL-Italic.svg') format('svg'); /* Legacy iOS */
+       url('./Bachelor/BachelorPadShadowJL-Italic.svg#BachelorPadShadowJL-Italic') format('svg'); /* Legacy iOS */
 }
 
 
