--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -14,7 +14,7 @@
 
 /* ----------------- hover css animation styling ------------- */
 
-.card-container.hvr-grow-shadow.hvr-rectangle-out.hvr-hollow:hover:before{
+.hvr-rectangle-out:hover:before{
   background-color:#325959;
 
 
